# ChangeLog for media-sound/gpodder
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/gpodder/ChangeLog,v 1.22 2009/03/18 12:29:50 hanno Exp $

*gpodder-0.15.1 (18 Mar 2009)

  18 Mar 2009; Hanno Boeck <hanno@gentoo.org> +gpodder-0.15.1.ebuild:
  Version bump.

*gpodder-0.14.0 (13 Jan 2009)

  13 Jan 2009; Hanno Boeck <hanno@gentoo.org> +gpodder-0.14.0.ebuild:
  Version bump.

*gpodder-0.13.1 (14 Nov 2008)

  14 Nov 2008; Hanno Boeck <hanno@gentoo.org> +gpodder-0.13.1.ebuild:
  Bump and always depend on eyeD3.

*gpodder-0.13.0 (09 Oct 2008)

  09 Oct 2008; Hanno Boeck <hanno@gentoo.org> +gpodder-0.13.0.ebuild:
  Version bump.

  09 Oct 2008; Markus Meier <maekke@gentoo.org> gpodder-0.12.1.ebuild:
  amd64/x86 stable, bug #240278

*gpodder-0.12.1 (31 Jul 2008)

  31 Jul 2008; Hanno Boeck <hanno@gentoo.org> +gpodder-0.12.1.ebuild:
  Version bump.

*gpodder-0.12.0 (17 Jul 2008)

  17 Jul 2008; Hanno Boeck <hanno@gentoo.org> +gpodder-0.12.0.ebuild:
  Version bump.

*gpodder-0.11.1 (02 Apr 2008)

  02 Apr 2008; Hanno Boeck <hanno@gentoo.org> +gpodder-0.11.1.ebuild:
  Bump and notify support.

*gpodder-0.11.0 (04 Mar 2008)

  04 Mar 2008; Hanno Boeck <hanno@gentoo.org> +gpodder-0.11.0.ebuild:
  Version bump.

*gpodder-0.10.1 (10 Nov 2007)

  10 Nov 2007; Hanno Boeck <hanno@gentoo.org> +gpodder-0.10.1.ebuild:
  Version bump.

  08 Nov 2007; Christoph Mende <angelos@gentoo.org> gpodder-0.9.5.ebuild:
  Stable on amd64 wrt bug #197180

  01 Nov 2007; Markus Meier <maekke@gentoo.org> gpodder-0.9.5.ebuild:
  x86 stable, bug #197180

  21 Sep 2007; Hanno Boeck <hanno@gentoo.org> gpodder-0.9.5.ebuild:
  Add missing deps.

*gpodder-0.9.5 (18 Sep 2007)

  18 Sep 2007; Hanno Boeck <hanno@gentoo.org> +gpodder-0.9.5.ebuild:
  Version bump.

*gpodder-0.9.4 (29 Jul 2007)

  29 Jul 2007; Hanno Boeck <hanno@gentoo.org> +gpodder-0.9.4.ebuild:
  Version bump.

*gpodder-0.9.2 (11 Jun 2007)
