@@ -1,10 +1,6 @@
-DIST gpodder-0.13.0.tar.gz 360649 RMD160 57542f19c69e6ea4e558e4697929bdeb0673aae9 SHA1 c0d027f62150ef9f9f99b016641742def622d79b SHA256 fd4a74339afbaf4d7230f9a9b9e64bc2f6297599999448c3f317b9e8e5ba4162
-DIST gpodder-0.13.1.tar.gz 358089 RMD160 7867c9929de373a1bf37fe8ed1da2c0b139de736 SHA1 ca8db0c6e26f5fd6ddfae83d20a8c96c2a6d3267 SHA256 8a0ed7eef0f7dd178ca43d7d6fc09453a2fa59bad2cc22da51be9c2d2974223c
-DIST gpodder-0.14.0.tar.gz 384643 RMD160 65a26656d071a635610236b1c40e45d454668db5 SHA1 c70cf40cc5eb40aaf7b79b6147e2636061dfbcbc SHA256 7241e710a8a12197fec20d1011a96d42e5bd56f95ec65de692d3050434b72887
 DIST gpodder-0.15.1.tar.gz 444215 RMD160 67b68747292bc930d7e5a72486039791b1401341 SHA1 5a387cf07b6d1ffc471a49494c84a2cb3170acef SHA256 edb4a146ef1859b03ff4051917da4509d952c77acd6730b2f346707b141dba30
-EBUILD gpodder-0.13.0.ebuild 1273 RMD160 85c7b647054c21ed9760ad44d7eddbf243d3a2d0 SHA1 d5b3a1bc0c4bc5d6b89cb41851a416cb0b0626f8 SHA256 bb47a2bb8500b86ba59aaca956324ac3cfbcb5f1d15aec75b07cf6e3108756b7
-EBUILD gpodder-0.13.1.ebuild 1248 RMD160 87afadece94e0cd77859c7e0d782f91286e99d53 SHA1 de5b7434fa04b34920133ca14edef93a9670f756 SHA256 7ca265ba11dc87f86c2d8ad527f95f22c9e5a9e143e98b9ac7a86fc6398eed26
-EBUILD gpodder-0.14.0.ebuild 1276 RMD160 e057a940f2e1f5f87a3165be26900f5fbbcf5f98 SHA1 43e0d666f329d53cf9c072a4126f644dabb4b6ff SHA256 7700eca8f4c75b10226dad0bbaa39c8edd014be186b72a39e06a6ec1de716188
+DIST gpodder-0.15.2.tar.gz 637768 RMD160 a6483639e7102e1fe47213bfb7ec49858d091244 SHA1 eb566ccb77123e19c71e882e04341a311c51820e SHA256 ba34be981e7d03867ea4b396bf9e917ad3f5fc337d50993a72b29d008b31476b
 EBUILD gpodder-0.15.1.ebuild 934 RMD160 bc5ea32b444190c22260607cd09ef3f6c8e99e7c SHA1 e764d3c5ccd98626050dae0d0e87128d19d442f8 SHA256 b97b79fbe07124100fee204cc072e16bdb6c315bffad4572b4ea964eeb4bc7e8
-MISC ChangeLog 2762 RMD160 ae1daa0c6166af64213670d03f2ed743607e3f20 SHA1 ca77f964b9ba347041ea0544df3acbff98b403aa SHA256 780b1d3b57e37b958c0459b35ba92ea491603f2c0edd71e388e9e88dee80a498
+EBUILD gpodder-0.15.2.ebuild 934 RMD160 11dcf6574c1649a936ce8fdc7cef92aa611b3e67 SHA1 46222186493a19e92d57a23773dd73716e425b44 SHA256 604196cdc11e10d59d99e2a3710f682411f798410e5456a2ede1d335c65f25b0
+MISC ChangeLog 2880 RMD160 aa6b4b66b18a42de03795c8c00ccb00c2083038d SHA1 7f21929de5c147e8f8803c4e00cf3782bbed5d41 SHA256 ac91912c3f146650b9a018c294100e96b843f84929c8ce0c6aee728ac97eda12
 MISC metadata.xml 217 RMD160 3b01d5dab901ee93217f72b711954d3cccbb1717 SHA1 e304788b60dd2cf214d360a21d267e8635474d98 SHA256 2f5dfc1eb79d2d9ee02663da6e1449f499c3a37b7f4cc2391e18d7789a314669
