@@ -1,6 +1,8 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/gpodder/gpodder-0.13.1.ebuild,v 1.1 2008/11/14 11:17:55 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/gpodder/gpodder-0.15.2.ebuild,v 1.1 2009/05/31 23:54:32 hanno Exp $
+
+EAPI=2
 
 inherit distutils
 
@@ -10,7 +12,7 @@ SRC_URI="mirror://berlios/${PN}/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64-linux ~x86-linux ~x86-solaris"
-IUSE="ipod libnotify"
+IUSE="ipod libnotify mad"
 RESTRICT="test"
 
 RDEPEND="dev-python/feedparser
@@ -19,24 +21,12 @@ RDEPEND="dev-python/feedparser
 	libnotify? ( dev-python/notify-python )
 	>=dev-python/pysqlite-2.4
 	dev-python/eyeD3
-	ipod? (
-		media-libs/libgpod
-	)"
+	ipod? ( media-libs/libgpod[python] )
+	mad? ( dev-python/pymad )"
 DEPEND="${RDEPEND}
 	dev-util/intltool
-	media-gfx/imagemagick
+	media-gfx/imagemagick[png]
 	sys-apps/help2man"
-
-pkg_setup() {
-	if use ipod && ! built_with_use media-libs/libgpod python ; then
-		eerror "media-libs/libgpod has to be compiled with USE=python"
-		die "Needed USE-flag for libgpod not found."
-	fi
-	if ! built_with_use 'media-gfx/imagemagick' 'png'; then
-		eerror "You must build imagemagick with png support"
-		die "media-gfx/imagemagick built without png"
-	fi
-}
 
 src_compile() {
 	emake generators || die
