@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/gpodder
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/gpodder/ChangeLog,v 1.22 2009/03/18 12:29:50 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/gpodder/ChangeLog,v 1.23 2009/05/31 23:54:32 hanno Exp $
+
+*gpodder-0.15.2 (31 May 2009)
+
+  31 May 2009; Hanno Boeck <hanno@gentoo.org> +gpodder-0.15.2.ebuild:
+  Version bump.
 
 *gpodder-0.15.1 (18 Mar 2009)
 
